# gesture-gaussian-effects

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  download_models.sh
include/: config.h.in
src/: MagicBlob.hpp  main.cpp
tests/: test_gaussian.cpp  test_opencv.cpp
